Made the dist builder work for windows

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "easy-poe2-trade",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
+    "dist:win": "tsc && vite build && electron-builder --win --x64",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
