Making some progress

--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "events": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite-tsconfig-paths": "^5.1.4",
+    "websocket": "^1.0.35",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "@types/ws": "^8.5.13",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react": "^4.2.1",
