--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,12 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
+      "electron/*": ["./src/electron/*"],
       "Components/*": [ "./src/renderer/Components/*" ],
       "Data/*": ["./src/renderer/Data/*"],
       "Utilities/*": ["./src/renderer/Utilities/*"],
+      "ipc/*": ["./ipc/*"],
+      "host-files/*": ["./src/host-files/*"],
     }
   },
   "include": ["src",
